# sing

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs  note.rs  score.rs
src/instrument/: mod.rs  square_wave.rs
