[package]
name = "sing"
version = "0.1.0"
authors = ["Haochuan Liu <haochuan.liu@gmail.com>"]
license = "MIT"
description = "CLI to generate music and sing your text/file/code."
readme = "README.md"
homepage = "https://github.com/haochuan/sing"
repository = "https://github.com/haochuan/sing"
keywords = ["cli", "music"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.10"
clap = "2.33.0"
spinner = "0.5.0"
